[package]
name = "lajittelia"
version = "0.2.0"
edition = "2021"

# smaller exe
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
#panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
regex = "1"
rayon = "1.7.0"
clap = { version = "4.1.13", features = ["derive"] }
